# opengltut

./: CMakeLists.txt  run.sh
src/: main.cpp  utils.cpp
src/headers/: utils.h
src/shaders/: triangle.frag  triangle.vert
